; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/joystick/iforce/extr_iforce-usb.c_iforce_usb_delete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/joystick/iforce/extr_iforce-usb.c_iforce_usb_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iforce = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iforce_usb_delete(%struct.iforce* %0) #0 {
  %2 = alloca %struct.iforce*, align 8
  store %struct.iforce* %0, %struct.iforce** %2, align 8
  %3 = load %struct.iforce*, %struct.iforce** %2, align 8
  %4 = getelementptr inbounds %struct.iforce, %struct.iforce* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @usb_kill_urb(i32 %5)
  %7 = load %struct.iforce*, %struct.iforce** %2, align 8
  %8 = getelementptr inbounds %struct.iforce, %struct.iforce* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @usb_kill_urb(i32 %9)
  %11 = load %struct.iforce*, %struct.iforce** %2, align 8
  %12 = getelementptr inbounds %struct.iforce, %struct.iforce* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @usb_kill_urb(i32 %13)
  %15 = load %struct.iforce*, %struct.iforce** %2, align 8
  %16 = getelementptr inbounds %struct.iforce, %struct.iforce* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @usb_free_urb(i32 %17)
  %19 = load %struct.iforce*, %struct.iforce** %2, align 8
  %20 = getelementptr inbounds %struct.iforce, %struct.iforce* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @usb_free_urb(i32 %21)
  %23 = load %struct.iforce*, %struct.iforce** %2, align 8
  %24 = getelementptr inbounds %struct.iforce, %struct.iforce* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @usb_free_urb(i32 %25)
  ret void
}

declare dso_local i32 @usb_kill_urb(i32) #1

declare dso_local i32 @usb_free_urb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
